# Rubiks_Cube_Solver

./: .gitignore  CMakeLists.txt  Korfs_algo.md  Planning.md  README.md  main.cpp
Models/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h
Solvers/: BFS_Solver.h  DFS_Solver.h  IDAstar_Solver.h  IDDFS_Solver.h
